--- a/healthkit-app/src/App.css
+++ b/healthkit-app/src/App.css
@@ -9,43 +9,67 @@
 	align-content: center;
 	gap: 2vw;
 	flex-wrap: wrap;
-	background-color: #f2f2f7; /* Adjusted to match Apple's background color */
+	background-color: #f2f2f7;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.datacard {
+.dashboard {
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.card {
 	background-color: #ffffff;
 	border-radius: 1em; /* More pronounced rounded corners like in the Apple Card UI */
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 	padding: 1em;
 	border: 1px solid rgba(0, 0, 0, 0.1); /* Subtle border like Apple's style */
+	gap: 2rem;
 }
 
-.wide,
-.half-width,
-.thin {
+.chart {
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	width: 50%;
+	height: 20rem; /* For larger screens, consider using min-height */
+	overflow: hidden;
+	align-items: center;
+	justify-content: center;
+	margin-right: 1em;
 }
 
-.wide {
-	width: 92%;
-	height: 20rem; /* For larger screens, consider using min-height */
+.controls {
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+	width: 25%;
+	height: 20rem;
 	overflow: hidden;
 	align-items: center;
 	justify-content: center;
 }
 
-.half-width {
-	width: calc(50% - 1vw); /* Adjusting width to account for the gap */
-	height: 20rem; /* For larger screens, consider using min-height */
-	justify-content: space-around;
+form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-.thin {
-	width: calc(40% - 1vw); /* Adjusting width to account for the gap */
-	height: 20rem; /* For larger screens, consider using min-height */
-	justify-content: space-around;
+form .checkboxes {
+	display: flex;
+	flex-direction: row;
+}
+
+form .date-picker {
+	display: flex;
+	flex-direction: row;
+}
+
+label {
+	padding: 5px;
 }
