--- a/healthkit-app/src/App.css
+++ b/healthkit-app/src/App.css
@@ -47,8 +47,8 @@
 	flex-direction: column;
 	gap: 1em;
 	width: 25%;
-	height: 20rem;
-	overflow: hidden;
+	/* height: 20rem; */
+	overflow: auto;
 	align-items: center;
 	justify-content: center;
 }
@@ -72,4 +72,17 @@ form .date-picker {
 
 label {
 	padding: 5px;
+}
+
+form .date-picker-compare {
+	display: flex;
+	flex-direction: column;
+}
+
+button.submit-button {
+	margin-top: 1rem;
+}
+
+.control {
+	margin: 1rem 0;
 }
